--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-spinners": "^0.13.8",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^2.12.0"
   },
